--- a/src/app/media.css
+++ b/src/app/media.css
@@ -7,7 +7,9 @@
    width: 30px !important;
    height: 30px !important;
  }
- 
+ .tag-lilne-pro{
+  font-size: 0.7rem !important;
+ }
  
 }
 
@@ -22,6 +24,12 @@
 .logo-wrapper{
   margin-left: 13px;
   margin-right: 13px;
+}
+.navbar-expand-lg{
+  background-color: black !important;
+  border:1px solid !important;
+  border-color: rgb(38, 38, 38) !important;
+  border-radius: 14px !important;
 }
 }
 
