--- a/src/app/style.css
+++ b/src/app/style.css
@@ -2,9 +2,13 @@
 	--red: #d8432a;
 	--black: #0e140a;
 }
-
+.stack {
+  font-family: "Stack Sans Notch", sans-serif !important;
+}
 body {
   font-family: "Mona Sans", sans-serif !important;
+  background-color: black !important;
+  
 }
 .home-page {
   height: 100vh;
@@ -26,7 +30,9 @@ body {
   flex-direction: column;
   animation: wordSlider 21s infinite cubic-bezier(0.9, 0.01, 0.3, 0.99);
 }
-
+#navbarNav{
+  background-color: black !important;
+}
 .home-page__title {
   font-size: 3.8rem;
   font-weight: 600;
@@ -125,7 +131,7 @@ body {
 .nav-wrapper{
   background-color: transparent !important;
 }
-.nav-inner{
+.navbar-nav{
   background-color: black !important;
   border:1px solid !important;
   border-color: rgb(38, 38, 38) !important;
@@ -137,13 +143,13 @@ body {
   text-decoration: none !important;
   color: white !important;
 }
-.nav-link a {
+.nav-item a {
   position: relative;
   text-decoration: none;
   color: white;
 }
 
-.nav-link a::after {
+.nav-item a::after {
   content: "";
   position: absolute;
   left: 0;
@@ -154,10 +160,20 @@ body {
   transition: width 0.3s ease;
 }
 
-.nav-link a:hover::after {
+.nav-item a:hover::after {
   width: 100%;
 }
 
 .wrapper-inner{
   flex-direction: column;
+}
+.tag-lilne-pro{
+  color: #D9ECFF !important;
+  
+}
+.tag-lilne-pro span{
+  background-color: #282732 !important;
+}
+#navbarNav{
+  background-color: transparent !important;
 }
