--- a/src/app/style.css
+++ b/src/app/style.css
@@ -177,3 +177,43 @@ body {
 #navbarNav{
   background-color: transparent !important;
 }
+@property --a {
+  syntax: "<angle>";
+  inherits: false;
+  initial-value: 0deg; 
+}
+@property --i {
+  syntax: "<number>";
+  inherits: false;
+  initial-value: 0; 
+}
+.project-img-wrapper {
+  
+  border-radius: 30px;
+  border: 1px solid #ccc;
+  padding: 10px; /* control the gap */
+  mask: 
+    conic-gradient(#000 0 0) content-box,
+    linear-gradient(calc(mod(var(--a),180deg)*var(--i) + var(--_a,45deg)),
+      #0000 30%,#000 40% 60%,#0000 70%) subtract,
+    conic-gradient(#000 0 0) padding-box;
+  transition: --i .5s,--a 0s .5s;
+  cursor: pointer;
+}
+.project-img-wrapper.alt {
+  --_a: -45deg;
+}
+.project-img-wrapper:hover {
+  --i: 1;
+  --a: 15turn; 
+  transition: --i 0s,--a 30s linear;
+}
+.project-img-wrapper:hover img {
+  transform: scale(1.05);
+  transition: 0.5s ease-in-out;
+}
+.project-img-wrapper img {
+  
+  transition: 0.5s ease-in-out;
+}
+
