--- a/src/app/style.css
+++ b/src/app/style.css
@@ -31,6 +31,7 @@ body {
 }
 #navbarNav {
   background-color: black !important;
+  
 }
 .home-page__title {
   font-size: 3.8rem;
@@ -134,6 +135,9 @@ body {
   background-color: black !important;
   border: 1px solid !important;
   border-color: rgb(38, 38, 38) !important;
+box-shadow: 1px 0px 13px 4px rgba(255,255,255,0.15);
+-webkit-box-shadow: 1px 0px 13px 4px rgba(255,255,255,0.15);
+-moz-box-shadow: 1px 0px 13px 4px rgba(255,255,255,0.15);
 }
 .navbar-nav {
   flex-direction: row !important;
